code link no longer hidden by href on mouseover

--- a/index.css
+++ b/index.css
@@ -7,6 +7,6 @@
 }
 
 footer{
-	bottom: 0px;
+	bottom: 20px;
 	position: absolute;
 }
